force-app/main/default/objects/SessionEvaluation__c/SessionEvaluation__c.object-meta.xml
<CustomObject>
    <label>Session Evaluation</label>
    <pluralLabel>Session Evaluations</pluralLabel>
    <nameField>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
        <displayFormat>EVAL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>