force-app/main/default/objects/SessionEvaluation__c/fields/ClarityScore__c.field-meta.xml
<CustomField>
    <fullName>ClarityScore__c</fullName>
    <label>Clarity Score</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>