force-app/main/default/objects/SessionEvaluation__c/fields/DiversityScore__c.field-meta.xml
<CustomField>
    <fullName>DiversityScore__c</fullName>
    <inlineHelpText>Does the session atract diverse people? Different roles, seniorities, backgrounds, and perspectives should be considered. (0-10 points)</inlineHelpText>
    <label>Diversity Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>