force-app/main/default/objects/SessionEvaluation__c/fields/EngagementScore__c.field-meta.xml
<CustomField>
    <fullName>EngagementScore__c</fullName>
    <label>Engagement Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>