force-app/main/default/objects/SessionEvaluation__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <label>Evaluator</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>SessionEvaluations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>