force-app/main/default/objects/SessionEvaluation__c/fields/FinalizedSnapshot__c.field-meta.xml
<CustomField>
    <fullName>FinalizedSnapshot__c</fullName>
    <label>Finalized Snapshot</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>