force-app/main/default/objects/SessionEvaluation__c/fields/Flagged__c.field-meta.xml
<CustomField>
    <fullName>Flagged__c</fullName>
    <label>Flagged</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>