force-app/main/default/objects/SessionEvaluation__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <label>Evaluation Run</label>
    <type>Lookup</type>
    <referenceTo>EvaluatorRun__c</referenceTo>
    <relationshipName>SessionEvaluations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>