force-app/main/default/objects/SessionEvaluation__c/fields/SkipReason__c.field-meta.xml
<CustomField>
    <fullName>SkipReason__c</fullName>
    <label>Skip Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>