force-app/main/default/objects/SessionEvaluation__c/fields/TotalScore__c.field-meta.xml
<CustomField>
    <fullName>TotalScore__c</fullName>
    <formula>ClarityScore__c + DiversityScore__c + EngagementScore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>