force-app/main/default/objects/SessionEvaluation__c/validationRules/Prevent_Changes_On_Finalized_Run.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changes_On_Finalized_Run</fullName>
    <active>true</active>
    <description>Prevent any updates to SessionEvaluation records when the parent EvaluatorRun is in Finalized status. This ensures data integrity after finalization.</description>
    <errorConditionFormula>AND(
            NOT(ISNEW()),
            ISPICKVAL(Run__r.Status__c, &apos;Finalized&apos;)
        )</errorConditionFormula>
    <errorDisplayField>Run__c</errorDisplayField>
    <errorMessage>Cannot modify evaluations after the run has been finalized.</errorMessage>
</ValidationRule>