force-app/main/default/objects/SessionEvaluation__c/validationRules/Restrict_Update_To_EvaluatorAndRunOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Update_To_EvaluatorAndRunOwner</fullName>
    <active>true</active>
    <description>Prevent updates to SessionEvaluation__c unless the running user is the Evaluator (Evaluator__c)</description>
    <errorConditionFormula>
        AND(
            NOT(ISNEW()),
            NOT(
                AND(
                    $User.Id = Evaluator__c,
                    $User.Id = Run__r.Evaluator__c
                )
            )
        )
    </errorConditionFormula>
    <errorMessage>Only the assigned Evaluator can update this record.</errorMessage>
    <errorDisplayField>Evaluator__c</errorDisplayField>
</ValidationRule>